--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,13 +1,21 @@
 .Carousel>div:last-of-type>div{
   margin: 0 auto;
   display: block;
+  display: flex;
+align-items: stretch;
 }
 
 .Carousel>button{
   background: none;
   border: none;
   position: relative;
-  top:175px
+  top:50%;
+  font-size:20px;
+  background-color: DodgerBlue;
+width: 100px;
+margin: 10px;
+
+line-height: 75px;
 }
 
 
@@ -17,7 +25,7 @@
 }
 
 .Carousel>button:last-of-type:before{
-  content: "◄ "
+  content: "◄ ";
 }
 
 .Carousel>button:first-of-type{
